feat: add login dashboard flow

--- a/index.html
+++ b/index.html
@@ -1,51 +1,16 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Aramatrix – Create AI-Powered Presentations Instantly</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="./styles.css" />
-</head>
-<body>
-  <header class="site-header">
-    <div class="container header-inner">
-      <a class="brand" href="#home" aria-label="Aramco Digital">
-        <img class="brand-logo" src="./pic/aramco_digital_logo_transparent-removebg-preview.png" alt="Aramco Digital logo" />
-      </a>
-      <nav class="nav" aria-label="Primary">
-        <ul>
-          <li><a class="nav-link active" href="#home">Home</a></li>
-          <li><a class="nav-link" href="#features">Features</a></li>
-          <li><a class="nav-link" href="#templates">Templates</a></li>
-          <li><a class="nav-link" href="#about">About</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
-
-  <main id="home" class="hero">
-    <div class="container hero-inner">
-      <div class="hero-content">
-        <h1 class="hero-title">Aramatrix – Create AI-Powered Presentations Instantly</h1>
-        <p class="hero-subtitle">Design smart slides, maintain brand consistency, and collaborate in real-time — no design skills required.</p>
-        <a href="#start" class="cta">
-          <span>Start Now</span>
-          <span class="cta-icon" aria-hidden="true">
-            <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path d="M5 12h12" stroke="white" stroke-width="2" stroke-linecap="round"/>
-              <path d="M13 6l6 6-6 6" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </span>
-        </a>
-      </div>
-      <div class="hero-visual" aria-hidden="true"></div>
-    </div>
-  </main>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Aramatrix – Create AI-Powered Presentations Instantly</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
-
-
